--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact Register</title>
 </head>
 <body>
+
+    <h3>Registro de Contactos</h3>
+    <form action="" method="post">
+        <div>
+            <label for='name'>Nombre : </label>
+            <input id="name" type="text" placeholder="Digite su nombre">
+        </div>
+        <div>
+            <label for="phone">Celular : </label>
+            <input id="phone" type="text" placeholder="Digite su celular">
+        </div>
+        <div>
+            <label for="email">Email : </label>
+            <input id="email" type="email" placeholder="Digite su email">
+        </div>
+        <div>
+            <label for="bornDate">Fecha de Nacimiento : </label>
+            <input id="bornDate" type="date">
+        </div>
+
+        <button>Guardar</button>
+        <a href="/">Cancelar</a>
+    </form>
 
 </body>
 </html>
