--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -7,7 +7,7 @@
 <body>
 
     <h3>Registro de Contactos</h3>
-    <form action="" method="post" th:object="contacts">
+    <form action="" method="post" th:object="${contacts}">
         <div>
             <label for='name'>Nombre : </label>
             <input id="name" type="text" placeholder="Digite su nombre" th:field="*{name}">
