--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -11,18 +11,22 @@
         <div>
             <label for='name'>Nombre : </label>
             <input id="name" type="text" placeholder="Digite su nombre" th:field="*{name}">
+            <div th:errors="*{name}"></div>
         </div>
         <div>
             <label for="phone">Celular : </label>
             <input id="phone" type="text" placeholder="Digite su celular" th:field="*{phone}">
+            <div th:errors="*{phone}"></div>
         </div>
         <div>
             <label for="email">Email : </label>
             <input id="email" type="email" placeholder="Digite su email" th:field="*{email}">
+            <div th:errors="*{email}"></div>
         </div>
         <div>
             <label for="bornDate">Fecha de Nacimiento : </label>
             <input id="bornDate" type="date" th:field="*{bornDate}">
+            <div th:errors="*{bornDate}"></div>
         </div>
 
         <button>Guardar</button>
