--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,8 +29,8 @@
                 <td th:text="${contacts.name}"></td>
                 <td th:text="${contacts.phone}"></td>
                 <td th:text="${contacts.email}"></td>
-                <td th:text="${contacts.bornDate}"></td>
-                <td th:text="${contacts.registryDate}"></td>
+                <td th:text="${#temporals.format(contacts.bornDate, 'dd/MM/YYYY')}"></td>
+                <td th:text="${#temporals.format(contacts.registryDate, 'dd/MM/YYYY hh:mm a')}"></td>
             </tr>
         </tbody>
     </table>
