--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -6,33 +6,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <div class="row justify-content-center">
+        <div class="col-md6 col-lg-4">
+            <h3>Registro de Contactos</h3> <br>
+            <form action="" method="post" th:object="${contacts}">
+                <div>
+                    <label for='name'>Nombre : </label>
+                    <input id="name" type="text" placeholder="Digite su nombre" th:field="*{name}">
+                    <div th:errors="*{name}"></div>
+                </div>
+                <div>
+                    <label for="phone">Celular : </label>
+                    <input id="phone" type="text" placeholder="Digite su celular" th:field="*{phone}">
+                    <div th:errors="*{phone}"></div>
+                </div>
+                <div>
+                    <label for="email">Email : </label>
+                    <input id="email" type="email" placeholder="Digite su email" th:field="*{email}">
+                    <div th:errors="*{email}"></div>
+                </div>
+                <div>
+                    <label for="bornDate">Fecha de Nacimiento : </label>
+                    <input id="bornDate" type="date" th:field="*{bornDate}">
+                    <div th:errors="*{bornDate}"></div>
+                </div>
 
-    <h3>Registro de Contactos</h3>
-    <form action="" method="post" th:object="${contacts}">
-        <div>
-            <label for='name'>Nombre : </label>
-            <input id="name" type="text" placeholder="Digite su nombre" th:field="*{name}">
-            <div th:errors="*{name}"></div>
+                <button>Guardar</button>
+                <a href="/">Cancelar</a>
+            </form>
         </div>
-        <div>
-            <label for="phone">Celular : </label>
-            <input id="phone" type="text" placeholder="Digite su celular" th:field="*{phone}">
-            <div th:errors="*{phone}"></div>
-        </div>
-        <div>
-            <label for="email">Email : </label>
-            <input id="email" type="email" placeholder="Digite su email" th:field="*{email}">
-            <div th:errors="*{email}"></div>
-        </div>
-        <div>
-            <label for="bornDate">Fecha de Nacimiento : </label>
-            <input id="bornDate" type="date" th:field="*{bornDate}">
-            <div th:errors="*{bornDate}"></div>
-        </div>
+    </div>
 
-        <button>Guardar</button>
-        <a href="/">Cancelar</a>
-    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
