Applying bootstrap styles to my new.html the form-control to errors

--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -12,23 +12,23 @@
             <form action="" method="post" th:object="${contacts}">
                 <div>
                     <label for='name'>Nombre : </label>
-                    <input id="name" type="text" placeholder="Digite su nombre" th:field="*{name}">
-                    <div th:errors="*{name}"></div>
+                    <input id="name" type="text" placeholder="Digite su nombre" th:field="*{name}" class="form-control" th:errorClass="is-invalid">
+                    <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="invalid-feedback"></div>
                 </div>
                 <div>
                     <label for="phone">Celular : </label>
-                    <input id="phone" type="text" placeholder="Digite su celular" th:field="*{phone}">
-                    <div th:errors="*{phone}"></div>
+                    <input id="phone" type="text" placeholder="Digite su celular" th:field="*{phone}" class="form-control" th:errorClass="is-invalid">
+                    <div th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="invalid-feedback"></div>
                 </div>
                 <div>
                     <label for="email">Email : </label>
-                    <input id="email" type="email" placeholder="Digite su email" th:field="*{email}">
-                    <div th:errors="*{email}"></div>
+                    <input id="email" type="email" placeholder="Digite su email" th:field="*{email}" class="form-control" th:errorClass="is-invalid">
+                    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="invalid-feedback"></div>
                 </div>
                 <div>
                     <label for="bornDate">Fecha de Nacimiento : </label>
-                    <input id="bornDate" type="date" th:field="*{bornDate}">
-                    <div th:errors="*{bornDate}"></div>
+                    <input id="bornDate" type="date" th:field="*{bornDate}" class="form-control" th:errorClass="is-invalid">
+                    <div th:if="${#fields.hasErrors('bornDate')}" th:errors="*{bornDate}" class="invalid-feedback"></div>
                 </div>
 
                 <button>Guardar</button>
