Modified the DAO and Controller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,9 @@
                 <td th:text="${contacts.email}"></td>
                 <td th:text="${#temporals.format(contacts.bornDate, 'dd/MM/YYYY')}"></td>
                 <td th:text="${#temporals.format(contacts.registryDate, 'dd/MM/YYYY hh:mm a')}"></td>
+                <td>
+                    <a th:href="@{/{id}/edit/(id=${contacts.id})}">Editar</a>
+                </td>
             </tr>
         </tbody>
     </table>
