--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -8,7 +8,7 @@
 <body>
     <div class="row justify-content-center">
         <div class="col-md6 col-lg-4">
-            <h3>Registro de Contactos</h3> <br>
+            <h3>[[${contacts.id ne null ? 'Editar Contacto' : 'Registro de Contactos'}]]</h3> <br>
             <form action="" method="post" th:object="${contacts}">
                 <div>
                     <label for='name'>Nombre : </label>
