--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         function delete_contact(element){
-            var ok = confirm('Estas seguro de eliminar el contacto?')
+            var ok = confirm('Estas seguro de eliminar el contacto?');
+
+            if(ok) {
+                element.nextElementSibling.submit();
+            }
         }
     </script>
 </body>
