Finishing function delete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,12 @@
                 <td th:text="${#temporals.format(contacts.registryDate, 'dd/MM/YYYY hh:mm a')}"></td>
                 <td>
                     <a th:href="@{/edit/{id} (id=${contacts.id})}">Editar</a>
+
+                    <a href="#" onclick="delete_contact(this)">Eliminar</a>
+
+                    <form th:action="@{/delete/{id} (id=${contacts.id})}" method="post">
+
+                    </form>
                 </td>
             </tr>
         </tbody>
