--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,44 +6,14 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div th:if="${msgSucc != null}">
-        [[${msgSucc}]]
+
+    <div class="container">
+        <div th:if="${msgSucc != null}" class="alert-success alert-dismissible">
+            [[${msgSucc}]]
+            <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
+        </div>
     </div>
 
-    <h1>Contacts List</h1>
-    <a href="new">Add</a>
-
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Phone</th>
-                <th>Email</th>
-                <th>Born Date</th>
-                <th>Registry Date</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="contacts : ${contacts}">
-                <td th:text="${contacts.id}"></td>
-                <td th:text="${contacts.name}"></td>
-                <td th:text="${contacts.phone}"></td>
-                <td th:text="${contacts.email}"></td>
-                <td th:text="${#temporals.format(contacts.bornDate, 'dd/MM/YYYY')}"></td>
-                <td th:text="${#temporals.format(contacts.registryDate, 'dd/MM/YYYY hh:mm a')}"></td>
-                <td>
-                    <a th:href="@{/edit/{id} (id=${contacts.id})}">Editar</a>
-
-                    <a href="#" onclick="delete_contact(this)">Eliminar</a>
-
-                    <form th:action="@{/delete/{id} (id=${contacts.id})}" method="post">
-
-                    </form>
-                </td>
-            </tr>
-        </tbody>
-    </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         function delete_contact(element){
