--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,11 @@
             [[${msgSucc}]]
             <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
         </div>
+
+        <h1>Contacts List</h1>
+        <div class="text-center my-3">
+            <a href="new" class="btn btn-primary">Add</a>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
