--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacts List</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,6 +17,38 @@
         <div class="text-center my-3">
             <a href="new" class="btn btn-primary">Add</a>
         </div>
+
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Born Date</th>
+                <th>Registry Date</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="contacts : ${contacts}">
+                <td th:text="${contacts.id}"></td>
+                <td th:text="${contacts.name}"></td>
+                <td th:text="${contacts.phone}"></td>
+                <td th:text="${contacts.email}"></td>
+                <td th:text="${#temporals.format(contacts.bornDate, 'dd/MM/YYYY')}"></td>
+                <td th:text="${#temporals.format(contacts.registryDate, 'dd/MM/YYYY hh:mm a')}"></td>
+                <td>
+                    <a th:href="@{/edit/{id} (id=${contacts.id})}">Editar</a>
+
+                    <a href="#" onclick="delete_contact(this)">Eliminar</a>
+
+                    <form th:action="@{/delete/{id} (id=${contacts.id})}" method="post">
+
+                    </form>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
